# king-kogpt2

./: .bentoignore  .gitignore  README.md  bento_import_model.py  bentofile.yaml  pyproject.toml  service.py
note/: 01_KoGPT2.ipynb  02_King.ipynb  03FineTuning.ipynb  03_FineTuning_SpecialToken.ipynb  31_FineTuning_SpecialToken.ipynb  32_FineTuning_SpecialToken_Tensorboard.ipynb
note/fineTuning/specialtoken/tensorboard/logs/: events.out.tfevents.1750814972.DESKTOP-BGELFKJ.396395.0  events.out.tfevents.1750815339.DESKTOP-BGELFKJ.400185.0  events.out.tfevents.1750815503.DESKTOP-BGELFKJ.405539.0  events.out.tfevents.1750815807.DESKTOP-BGELFKJ.3288.0
