[project]
name = "king-kogpt2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = ["transformers>=4.52.4", "torch>=2.7.1", "torchvision>=0.22.1", "torchaudio>=2.7.1"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "jupyterlab>=4.4.3",
    "ipywidgets>=8.1.7",
]
