[project]
name = "king-kogpt2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ppabam", email = "tom@diginori.com"},
]
dependencies = ["transformers[torch]>=4.51.3", "torch>=2.7.1", "torchvision>=0.22.1", "torchaudio>=2.7.1", "accelerate>=0.26.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "jupyterlab>=4.4.3",
    "ipywidgets>=8.1.7",
]
data = [
    "president-speech>=0.9.1",
]
finetuning = [
    "datasets>=3.6.0",
]
